# pyservice

./: .env.dev  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini
.github/workflows/: pre-commit.yml  test.yml
src/pyservice/: __init__.py  context.py  exc.py  logger.py  schema.py  user.py  version.py
src/pyservice/api/: dependencies.py  server.py
src/pyservice/api/routers/: auth.py
src/pyservice/auth/: context.py  oidc.py  token.py
src/pyservice/pg/: context.py  models.py  store.py  utils.py
src/pyservice/pg/migrations/: env.py  script.py.mako
src/pyservice/pg/migrations/versions/: a6da47126d8d_create_tables.py
tests/auth/: test_token.py
tests/pg/: test_store.py
